[package]
name = "pdfsnap-server"
version = "0.1.0"
edition = "2024"
default-run = "pdfsnap-server"

[[bin]]
name = "pdfsnap-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.98"
ascii85 = "0.2.1"
async-trait = "0.1.88"
aws-config = { version = "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.100.0", features = ["behavior-version-latest"] }
axum = { version = "0.8.4", features = ["macros"] }
axum_typed_multipart = "0.16.3"
crc32fast = "1.5.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
flate2 = { version = "1.1.2", features = ["zlib-rs"] }
image = "0.25.6"
lazy_static = "1.5.0"
log = "0.4.27"
lopdf = "0.36.0"
rand = "0.9.2"
reqwest = "0.12.22"
rustybuzz = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3.19"
ttf-parser = "0.25.1"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "v7"] }
dialoguer = "0.11"
